[BUG] prices in 0

--- a/report/ticket.xml
+++ b/report/ticket.xml
@@ -68,12 +68,12 @@
                                       </t>
                                       <t t-if="o.picking_type_id.code == 'outgoing'">
                                         <td width="20" style="padding-left:5px;">
-                                          $<span t-field="l.sale_line_id.price_unit" />
+                                          $<span t-field="l.procurement_id.sale_line_id.price_unit" />
                                         </td>
                                         <td width="20" style="padding-left:5px;">
                                           <t
                                               t-set="total"
-                                              t-value="get_total_line(l.product_uom_qty, l.sale_line_id.price_unit)" />
+                                              t-value="get_total_line(l.product_uom_qty, l.procurement_id.sale_line_id.price_unit)" />
                                           $<span t-esc="'{0:,.2f}'.format(total)"/>
                                         </td>
                                       </t>
